# pvt-sim

./: .cursorindexingignore  .env  .env.defaults  .gitignore  AGENTS.md  CONTRIBUTING.md  LECTURE_SLIDES_MERGED.md  PVTSIM_DEPENDENCY_MAP.md  README.md  TERM_PROJECT_ASSIGNMENT.md  _demo_runbook_2026-04-21.md  phase-envelope-testing-set.md  pvtsim_pypackages_permissive.md  pyproject.toml  requirements.txt
.agents/skills/advise/: SKILL.md
.agents/skills/blueprint-architect/: SKILL.md
.agents/skills/blueprint-implementer/: SKILL.md
.agents/skills/blueprint-presence-checker/: SKILL.md
.agents/skills/blueprint-progress-checker/: SKILL.md
.agents/skills/create-plan/: SKILL.md
.cursor/: README.md  mcp.json.example
.cursor/rules/: 00-repo-contract.mdc  10-runtime-surface.mdc  20-python-boundaries.mdc  30-verification-and-lanes.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  gui.yml  nightly.yml  smoke.yml  static.yml
data/pure_components/: components.json
docs/: architecture.md  development.md  file_structure.md  input_schema.md  packaging.md  runtime_surface_consolidation_blueprint.md  runtime_surface_standard.md  tbp.md  technical_notes.md  test_consolidation_plan.md  tuning.md  units.md  validation_plan.md
docs/audits/: README.md  git-history-deletion-audit-2026-04-15.md  git-history-modification-audit-2026-04-15.md
docs/blueprints/: fast_phase_envelope.md  selective_gdem_flash_ss_fallback.md
docs/plans/: README.md
docs/validation/: bubble_point_validation_matrix.md  dew_point_validation_matrix.md  external_validation_engine.md  fluid_validation_matrix.md  mi_pvt_phase_envelope_roster.md  pete665_assignment_baseline.md  phase_envelope_module_runbook.md  phase_envelope_validation_matrix.md  runtime_surface_course_audit.md
examples/: hw7_whitson_torp_config.json  pete665_assignment_case.json  phase_envelope_config.json  pt_flash_config.json  swelling_test_config.json  tbp_fluid_definition.json
packaging/: pvtsim_gui.spec
packaging/installer/: pvtsim.iss
scripts/: audit_component_aliases.py  debug_phase_envelope_roots.py  dwsim_batch_phase_envelopes.py  generate_validation_fixtures.py  run_full_validation.py  run_pete665_assignment.py  run_phase_envelope_validation.py  run_premerge_checks.py  validate_modules.py  validate_units.py
scripts/data/: phase_envelope_breadth_roster.json
src/pvtapp/: __init__.py  assignment_case.py  capabilities.py  cli.py  component_catalog.py  excel_export.py  gui_entry.py  job_runner.py  main.py  plus_fraction_policy.py  schemas.py  style.py  workers.py
src/pvtcore/: helper_functions.py
tests/: conftest.py
tests/contracts/: test_robustness.py
tests/unit/: test_characterization.py  test_cli_validate.py  test_components.py  test_correlations.py  test_cubic_solver.py  test_cvd_dl_retained_basis.py  test_cvd_volume_closure.py  test_density.py  test_envelope.py  test_envelope_continuation.py  test_envelope_local_roots.py  test_envelope_trace.py  test_eos.py  test_experiments.py  test_flash.py  test_fluid_definition_parser.py  test_gui_contracts.py  test_ift_parachor.py  test_io.py  test_lumping_delumping.py  test_pete665_assignment.py  test_prode_bridge.py  test_pvtapp_assignment_case.py  test_pvtapp_cce_workflow.py  test_pvtapp_conditions_input.py  test_pvtapp_cvd_result_views.py  test_pvtapp_desktop_contract.py  test_pvtapp_phase_envelope_widget_style.py  test_pvtapp_phase_envelope_workflow.py  test_pvtapp_pt_flash_viscosity.py  test_pvtapp_remaining_workflows.py  test_pvtapp_runtime_contract.py  test_pvtapp_stability_desktop.py  test_pvtapp_stability_runtime.py  test_pvtapp_tbp_result_views.py  test_pvtapp_workspace_layout.py  test_pvtapp_zero_fraction_duplicates.py  test_riazi_daubert.py  test_runtime_contract.py  test_saturation.py  (+13 more)
tests/validation/: test_external_corpus_schema.py  test_external_literature.py  test_external_literature_vle.py  test_external_pure_component_saturation.py  test_flash_fixture_invariants.py  test_fluid_validation_matrix.py  test_heavy_end_pt_flash_runtime_matrix.py  test_mi_pvt_validation.py  test_nist_validation.py  test_nist_vapor_pressure.py  test_phase_envelope_breadth_roster.py  test_phase_envelope_release_gates.py  test_phase_envelope_runtime_matrix.py  test_phase_envelope_validation.py  test_plus_fraction_bubble_characterization.py  test_plus_fraction_dew_characterization.py  test_plus_fraction_validation.py  test_saturation_equation_benchmarks.py  test_stability_external_pure_component_regimes.py  test_stability_fixture_validation.py  test_stability_physical_state_hints.py  test_stability_runtime_matrix.py  test_stability_saturation_regime_windows.py  test_stability_validation.py  test_thermopack_phase_envelope.py  test_vle_benchmarks.py  test_vs_mi_pvt.py  test_vs_prode.py  test_vs_thermopack.py
tools/: build_installer.ps1  build_windows.ps1
tools/python_project_starter/: .env.defaults  .gitignore  README.md  TEMPLATE_NOTES.md  pyproject.toml
tools/python_project_starter/src/your_package_name/: __init__.py  __main__.py  cli.py
tools/python_project_starter/tests/: test_smoke.py
(+247 files in other folders)
