[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvt-simulator"
version = "0.1.0"
description = "High-fidelity petroleum PVT simulator core (EOS, stability, flash, characterization)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ole" }]
keywords = ["pvt", "eos", "peng-robinson", "flash", "stability", "reservoir"]

# Keep the runtime dependency surface small; test/docs/dev tooling lives in optional extras.
dependencies = [
  "numpy>=1.20",
  "pydantic>=2.0",
]

[project.optional-dependencies]
# Install with: pip install -e '.[gui]'
# GUI-only desktop runtime (no SciPy-backed extras).
gui = [
  "PySide6>=6.5.0",
  "matplotlib>=3.4",
  "mplcursors>=0.5",
  "openpyxl>=3.1",
  "pyqtgraph>=0.13.0",
]
# Install with: pip install -e '.[full]'
# Full desktop/runtime surface: GUI + SciPy-backed features.
full = [
  "PySide6>=6.5.0",
  "matplotlib>=3.4",
  "mplcursors>=0.5",
  "openpyxl>=3.1",
  "pyqtgraph>=0.13.0",
  "scipy>=1.10",
]
# Install with: pip install -e '.[dev]'
# Headless developer tooling; pair with `.[gui]` for GUI development/tests.
dev = [
  "pytest>=7.0",
  "pytest-cov>=3.0",
  "scipy>=1.10",
  "thermo",
  "thermopack",
  "black>=22.0",
  "flake8>=4.0",
  "mypy>=0.950",
  "pylint>=2.13.0",
  "build>=0.8.0",
  "wheel>=0.37.0",
]
# Install with: pip install -e '.[docs]'
docs = [
  "sphinx>=4.5.0",
  "sphinx-rtd-theme>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pvtcore*", "pvtapp*"]

[project.scripts]
pvtsim = "pvtapp.cli:main"
pvtsim-cli = "pvtapp.cli:main"

[project.gui-scripts]
pvtsim-gui = "pvtapp.main:main"

[tool.pytest.ini_options]
addopts = "-q"
cache_dir = ".pycache/pytest"
testpaths = ["tests/unit", "tests/contracts/test_invariants.py"]
markers = [
  "slow: longer-running tests",
  "nightly: extended validation suite",
  "gui_contract: optional desktop layout/style/presentation contract checks",
  "eos: equation of state tests",
  "flash: PT flash tests",
  "stability: stability analysis tests",
  "saturation: bubble/dew point tests",
  "envelope: phase envelope tests",
  "experiments: CCE/DL/CVD/separator tests",
  "properties: density/viscosity/IFT tests",
  "characterization: plus fraction / SCN tests",
  "runtime: pvtapp runtime/schema tests",
  "validation: external reference validation",
]
